-- Restyled the molecular viewers to remove the gap between the two views -- Fixed the splash screen's spacing

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -27,6 +27,13 @@
     height: 100%;
 }
 
+.molecularViewerA {
+   padding-right: 0;
+}
+
+.molecularViewerB {
+    padding-left: 0;
+}
 p.view {
     color: dimgray;
     font-weight: bolder;
